# Music-Platform

./: README.md  RESULTS.md  ans.txt  notes.txt  pyproject.toml
albums/: models.py
albums/migrations/: 0001_initial.py  0002_alter_album_release_time.py
artists/: models.py
artists/migrations/: 0001_initial.py  0002_alter_artist_options.py
music_platform/: settings.py
