[tool.poetry]
name = "music platform"
version = "0.1.0"
description = ""
authors = ["AdhamAliAbdelAal <adhamali20012015@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
